--- a/omdb-app/style.css
+++ b/omdb-app/style.css
@@ -30,13 +30,15 @@ h1 {
 }
 
 .carousel-container {
-  width: 100%;
+  width: 80%;
+  margin-top: 20px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .carousel-images {
-  width: 30%;
+  width: 25%;
+  border: 3px solid white;
 }
 
 .carousel-images img {
@@ -53,6 +55,7 @@ h1 {
   align-self: center;
   width: 25px;
   height: 25px;
+  margin: 15px;
   background-color: red;
   font-family: 'Rock Salt';
   font-size: 12px;
@@ -63,11 +66,18 @@ h1 {
   cursor: pointer;
 }
 
+.carousel-button:hover {
+  cursor: pointer;
+  background: white;
+  color: red;
+}
+
 .quote-container {
-  height: 500px;
-  width: 400px;
-  margin-top: 100px;
-  position: relative;
+  height: 300px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .quote-background {
@@ -80,65 +90,36 @@ h1 {
   font-size: 1200px;
   color: rgba(255, 255, 255, 0.1);
   line-height: .7;
+  text-align: center;
+  margin: none;
+  padding: 2px;
 }
 
 #one {
-  text-align: right;
-  margin: none;
-  padding: 2px;
   transform: rotate(180deg);
   line-height: .5;
 }
 
-#two {
-  text-align: right;
-  margin: none;
-  padding: 2px;
-  padding: 2px;
-}
-
-.quote {
-  height: 400px;
-  width: 400px;
-  line-height: 0;
-  /* background-color: rgba(255, 255, 255, 0.5); */
-  position: absolute;
-  top: 65px;
-}
-
 .random-quote {
   font-family: 'Rock Salt';
-  font-size: 24px;
+  font-size: 28px;
   color: white;
-  margin: 200px auto;
+  margin: auto;
   text-align: center;
 }
 
-.quote-button-container {
-  height: 150px;
-  margin: 10px auto;
+.middle {
+  height: 300px;
+  display: flex;
+  justify-content: center;
 }
 
 .button {
-  height: 100px;
-  width: 200px;
-  background-color: red;
-  border-radius: 5%;
-  border: black;
-  line-height: 1.5;
   cursor: pointer;
 }
 
-.quote-button:hover {
-  cursor: pointer;
+.button:hover {
   background: white;
   color: red;
-}
-
-.button-text {
-  font-family: 'Rock Salt';
-  font-size: 18px;
-  color: black;
-  /* padding-top: 35px; */
-  text-align: center;
+  cursor: pointer;
 }
