--- a/omdb-app/style.css
+++ b/omdb-app/style.css
@@ -1,12 +1,20 @@
 body {
   background-color: black;
+  margin: 0;
+  padding: 0;
+}
+
+.header {
+  width: 100%;
+  height: 50px;
+  background-color: red;
 }
 
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px;
+  /* padding: 50px; */
 }
 
 .title {
