--- a/omdb-app/style.css
+++ b/omdb-app/style.css
@@ -6,7 +6,7 @@ body {
 
 .header {
   width: 100%;
-  height: 50px;
+  height: 25px;
   background-color: red;
 }
 
@@ -27,6 +27,7 @@ h2 {
   font-size: 24px;
   text-align: center;
   line-height: 0;
+  margin-top: 40px;
 }
 
 h1 {
@@ -39,7 +40,7 @@ h1 {
 
 .carousel-container {
   width: 80%;
-  margin-top: 20px;
+  margin-top: 10px;
   display: flex;
   justify-content: center;
 }
@@ -95,14 +96,15 @@ h1 {
 }
 
 #title {
-  color: white;
-  margin: 0;
+  width: 63%;
+  color: red;
+  margin: 0 auto;
   padding: 0;
   text-align: center;
 }
 
 #plot {
-  width: 70%;
+  width: 63%;
   color: white;
   margin: 0 auto;
   padding: 0;
@@ -120,6 +122,7 @@ h1 {
   margin: 5px;
   padding: 0px;
   text-align: center;
+  font-family: 'Roboto';
 }
 
 #run-time, #release-date, #rating {
@@ -170,4 +173,18 @@ h1 {
   background: white;
   color: red;
   cursor: pointer;
+}
+
+#first, #second, #third {
+  margin-top: 5px;
+  padding: 0;
+}
+
+#first {
+  margin-top: 25px;
+  font-size: 24px;
+}
+
+dd {
+  font-family: 'Roboto';
 }
