--- a/omdb-app/style.css
+++ b/omdb-app/style.css
@@ -2,19 +2,20 @@ body {
   background-color: black;
   margin: 0;
   padding: 0;
+  height: 1500px;
 }
 
 .header {
   width: 100%;
   height: 25px;
   background-color: red;
+  position: fixed;
 }
 
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* padding: 50px; */
 }
 
 .title {
@@ -27,7 +28,7 @@ h2 {
   font-size: 24px;
   text-align: center;
   line-height: 0;
-  margin-top: 40px;
+  margin-top: 80px;
 }
 
 h1 {
@@ -73,20 +74,18 @@ h1 {
   border-radius: 50%;
   text-align: center;
   cursor: pointer;
+  text-shadow:  1px 1px 5px black;
+  box-shadow: 1px 1px 4px white;
 }
-
-/* .carousel-button:hover {
-  cursor: pointer;
-  background: white;
-  color: red;
-} */
 
 .quote-container {
   height: 300px;
   width: 95%;
+  margin: 10px;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  overflow: hidden;
 }
 
 #info {
@@ -145,7 +144,7 @@ h1 {
 
 #one, #two {
   font-family: 'Alex Brush';
-  font-size: 100vw;
+  font-size: 90vw;
   color: rgba(255, 255, 255, 0.1);
   line-height: .7;
   text-align: center;
@@ -160,7 +159,7 @@ h1 {
 
 .random-quote {
   font-family: 'Rock Salt';
-  font-size: 2vw;
+  font-size: 1.8vw;
   color: white;
   margin: auto;
   text-align: center;
@@ -201,3 +200,27 @@ dd {
   background: white;
   color: red;
 }
+
+.arrows {
+  font-family: 'Rock Salt';
+  font-size: 14px;
+  color: white;
+  margin: 0 15px;
+}
+
+.info-buttons {
+  display: flex;
+  flex-direction: row;
+}
+
+/* .test {
+  height: 200px;
+  width: 200px;
+  margin: 50px;
+  background-color: red;
+  border-radius: 50%;
+  box-shadow: 2px 2px 5px white;
+  --light: red;
+  --dark: black;
+  background: radial-gradient(at top left, var(--light), var(--dark));
+} */
