--- a/omdb-app/style.css
+++ b/omdb-app/style.css
@@ -5,6 +5,54 @@ body {
   height: 1550px;
 }
 
+#modal {
+  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  overflow: auto;
+}
+
+#modal-textbox {
+  background-color: white;
+  height: 350px;
+  width: 550px;
+  border-radius: 2px;
+  margin: 150px auto;
+  box-shadow: 4px 4px 4px rgba(255, 255, 255, 0.5);
+  padding: 2%;
+  line-height: 120%;
+  font-family: 'Rock Salt';
+  color: black;
+  font-size: 2.2vw;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+p {
+  justify-content: center;
+  margin-top: 25%;
+}
+
+#modal-footer {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 100%;
+}
+
+.modal-button {
+  font-family: 'Rock Salt';
+  color: red;
+  font-size: 1.2vw;
+  cursor: pointer;
+}
+
 .header {
   width: 100%;
   height: 25px;
