--- a/omdb-app/style.css
+++ b/omdb-app/style.css
@@ -20,11 +20,12 @@ body {
   background-color: white;
   height: 350px;
   width: 550px;
+  border: 8px solid red;
   border-radius: 2px;
   margin: 150px auto;
   box-shadow: 4px 4px 4px rgba(255, 255, 255, 0.5);
   padding: 2%;
-  line-height: 120%;
+  line-height: 10%;
   font-family: 'Rock Salt';
   color: black;
   font-size: 2.2vw;
@@ -38,19 +39,20 @@ p {
   margin-top: 25%;
 }
 
-#modal-footer {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  height: 100%;
+.funko {
+  width: 110px;
+  margin-top: 10px;
 }
 
 .modal-button {
+  text-align: center;
+  height: 100%;
   font-family: 'Rock Salt';
   color: red;
   font-size: 1.2vw;
   cursor: pointer;
+  width: 300px;
+  margin: 0 auto;
 }
 
 .header {
