--- a/omdb-app/style.css
+++ b/omdb-app/style.css
@@ -14,6 +14,7 @@ body {
   width: 100%;
   z-index: 1;
   overflow: auto;
+  display: none;
 }
 
 #modal-textbox {
@@ -30,18 +31,30 @@ body {
   color: black;
   font-size: 2.2vw;
   text-align: center;
-  display: flex;
-  flex-direction: column;
 }
 
 p {
   justify-content: center;
-  margin-top: 25%;
+  margin-top: 20%;
+  margin-bottom: 50px;
+}
+
+.blinker {
+  animation-name: blinker;
+  animation-duration: 3s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes blinker {
+  0%{opacity: 1.0;}
+  50%{opacity: 0.0;}
+  100%{opacity: 1.0;}
 }
 
 .funko {
   width: 110px;
-  margin-top: 10px;
+  margin: 0;
 }
 
 .modal-button {
@@ -51,8 +64,16 @@ p {
   color: red;
   font-size: 1.2vw;
   cursor: pointer;
-  width: 300px;
+  height: 50px;
+  width: 200px;
   margin: 0 auto;
+  line-height: 15px;
+  padding: 3px;
+}
+
+marquee {
+  height: 100%;
+  justify-content: center;
 }
 
 .header {
