--- a/omdb-app/style.css
+++ b/omdb-app/style.css
@@ -78,9 +78,20 @@ marquee {
 
 .header {
   width: 100%;
-  height: 25px;
+  height: 50px;
   background-color: red;
   position: fixed;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.header-button {
+  color: black;
+  text-decoration: none;
+  font-family: 'Rock Salt';
+  font-size: 1.3vw;
+  align-self: center;
 }
 
 .container {
@@ -99,7 +110,7 @@ h2 {
   font-size: 24px;
   text-align: center;
   line-height: 0;
-  margin-top: 80px;
+  margin-top: 100px;
 }
 
 h1 {
@@ -230,7 +241,7 @@ h1 {
 
 .random-quote {
   font-family: 'Rock Salt';
-  font-size: 1.8vw;
+  font-size: 2.5vw;
   color: white;
   margin: auto;
   text-align: center;
