--- a/omdb-app/style.css
+++ b/omdb-app/style.css
@@ -2,7 +2,7 @@ body {
   background-color: black;
   margin: 0;
   padding: 0;
-  height: 1550px;
+  height: 2200px;
 }
 
 #modal {
@@ -307,3 +307,55 @@ dd {
   --dark: black;
   background: radial-gradient(at top left, var(--light), var(--dark));
 } */
+
+.game-title {
+  height: 50px;
+  width: 100%;
+  text-align: center;
+  font-family: 'Rock Salt';
+  font-size: 2vw;
+  color: white;
+  margin: 50px 0;
+}
+
+.game-container {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  border: 1px solid white;
+}
+
+.player-choices {
+  background-color: white;
+  border: 1px solid red;
+  height: 500px;
+  width: 30%;
+}
+
+.game-outcome {
+  border: 1px solid white;
+  height: 500px;
+  width: 30%;
+  /* display: flex; */
+  flex: 1;
+}
+
+.draw-button {
+
+}
+
+#john-pic {
+  height: 300px;
+  margin-top: 175px;
+  margin-left: 25%;
+  flex: 2;
+}
+
+#hans-pic {
+  height: 300px;
+  margin-top: 175px;
+  margin-left: 25%;
+  flex: 2;
+}
