--- a/omdb-app/style.css
+++ b/omdb-app/style.css
@@ -21,10 +21,11 @@ body {
   background-color: white;
   height: 350px;
   width: 550px;
-  border: 8px solid red;
+  border-width: 8px;
+  border-style: double;
   border-radius: 2px;
   margin: 150px auto;
-  box-shadow: 4px 4px 4px rgba(255, 255, 255, 0.5);
+  box-shadow: 4px 4px 6px rgba(255, 255, 255, 0.5);
   padding: 2%;
   line-height: 10%;
   font-family: 'Rock Salt';
@@ -161,7 +162,7 @@ h1 {
 }
 
 #quote-section {
-  height: 200px;
+  height: 250px;
   width: 100%;
 }
 
@@ -298,19 +299,6 @@ dd {
   flex-direction: row;
 }
 
-
-/* .test {
-  height: 200px;
-  width: 200px;
-  margin: 50px;
-  background-color: red;
-  border-radius: 50%;
-  box-shadow: 2px 2px 5px white;
-  --light: red;
-  --dark: black;
-  background: radial-gradient(at top left, var(--light), var(--dark));
-} */
-
 .game-title {
   height: 300px;
   width: 100%;
@@ -387,6 +375,19 @@ h3 {
   text-align: center;
   font-size: 2vw;
   font-family: 'Rock Salt';
+}
+
+.blinker2 {
+  animation-name: blinker2;
+  animation-duration: 1.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: 2;
+}
+
+@keyframes blinker2 {
+  0%{opacity: 1.0;}
+  50%{opacity: 0.0;}
+  100%{opacity: 1.0;}
 }
 
 .throw-button {
