--- a/omdb-app/style.css
+++ b/omdb-app/style.css
@@ -1,3 +1,4 @@
+
 body {
   background-color: black;
   margin: 0;
@@ -328,14 +329,16 @@ span {
 .game-container {
   width: 100%;
   height: 500px;
+  border-top: 8px solid red;
+  border-bottom: 8px solid red;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .player-container {
   background-color: white;
-  border: 5px solid red;
+  /* border: 5px solid red; */
   height: 500px;
   width: 30%;
 
@@ -359,7 +362,7 @@ h3 {
 #hans-pic {
   height: 300px;
   margin-top: 75px;
-  margin-left: 22%;
+  margin-left: 25%;
 }
 
 .outcome-container {
@@ -392,4 +395,49 @@ h3 {
 
 .throw-button {
   align-self: center;
+}
+
+
+@media (min-width: 1400px) {
+
+  body {
+    height: 3100px;
+  }
+
+  #modal-textbox {
+    background-color: white;
+    height: 350px;
+    width: 550px;
+    border-width: 8px;
+    border-style: double;
+    border-radius: 2px;
+    margin: 150px auto;
+    box-shadow: 4px 4px 6px rgba(255, 255, 255, 0.5);
+    padding: 2%;
+    line-height: 10%;
+    font-family: 'Rock Salt';
+    color: black;
+    font-size: 1.5vw;
+    text-align: center;
+  }
+
+  .quote-container {
+    height: 400px;
+    width: 95%;
+    margin: 0px 10px 0px 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    overflow: hidden;
+  }
+
+  #quote-section {
+    height: 350px;
+    width: 100%;
+  }
+
+  .game-title {
+    height: 350px;
+    width: 100%;
+  }
 }
