--- a/luhn/style.css
+++ b/luhn/style.css
@@ -1,8 +1,9 @@
 body {
   background-color: #8C837B;
-  padding: 50px;
+  padding: 100px;
+  text-align: center;
 }
 
-h1 {
-  text-align: center;
+.input {
+  width: 300px;
 }
